# physics-llm-inference

./: .gitignore  README.md  pyproject.toml
ch01/: __init__.py  attention.py  benchmark_ch01.py  ffn.py  gqa.py  test_ch01.py  transformer.py
ch02/: __init__.py  benchmark_ch02.py  cached_generation.py  generation.py  kv_cache.py  test_ch02.py
ch03/: __init__.py  batching_benchmark.py  gemm_benchmark.py  gemv_benchmark.py  roofline.py  test_ch03.py
ch04/: __init__.py  gpu_architecture.py  hello_cuda.cu  launch_overhead.py  test_ch04.py
ch05/: __init__.py  coalescing.cu  memory_coalescing.py  shared_memory.py  tensor_cores.py  test_ch05.py  tiled_matmul.cu  triton_matmul.py
ch06/: __init__.py  attention_memory.py  flash_attention.py  online_softmax.py  test_ch06.py
ch07/: __init__.py  continuous_batcher.py  paged_memory.py  radix_cache.py  scheduler.py  static_batcher.py  test_ch07.py
ch08/: __init__.py  chunked_prefill.py  cuda_graph.py  mixed_batch.py  overlap_scheduler.py  test_ch08.py
ch09/: __init__.py  moe_inference.py  moe_layer.py  nccl_primitives.py  tensor_parallel.py  test_ch09.py
ch10/: __init__.py  api_types.py  benchmark.py  engine.py  test_ch10.py  tokenizer_pool.py
